[gd_scene load_steps=4 format=3 uid="uid://ckcvjprnc1qco"]

[ext_resource type="Script" path="res://Scripts/Rabbit.gd" id="1_mt21x"]
[ext_resource type="Texture2D" uid="uid://c3jagmr84tddp" path="res://Sprites/bunnysingle.png" id="2_apujq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vaqj0"]
radius = 39.0512

[node name="Rabbit" type="CharacterBody2D"]
position = Vector2(262, 257)
script = ExtResource("1_mt21x")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_apujq")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_vaqj0")

[node name="walkTimer" type="Timer" parent="."]
autostart = true

[node name="ChangeStateTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="walkTimer" to="." method="_on_walk_timer_timeout"]
[connection signal="timeout" from="ChangeStateTimer" to="." method="_on_change_state_timer_timeout"]
